checker/tests/parsing/errors/empty_impl_body.mft
type T {
  impl Foo {};
}
=== error ===
Unrecognized token `}` found at 21:22
Expected one of "identifier"